file paths are read by ResourceLoader